# ShoppingAssistant_SwirlAI

./: .gitignore  Makefile  README.md  docker-compose.yml  ecr.sh  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
evals/: eval_coordinator_agent.py  eval_retriever.py
notebooks/week1/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb
notebooks/week2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-evaluation-dataset.ipynb  04-RAG-Evals.ipynb
notebooks/week3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week4/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week5/: 01-Agent-Multi-Turn.ipynb  02-Multiple-Tools.ipynb  03-Streaming-State.ipynb  04-Human-Feedback.ipynb  05-MCP.ipynb
notebooks/week6/: 01-Shopping-Cart-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  03-Coordinator-Agent.ipynb  04-Coordinator-Evaluation.ipynb
notebooks/week7/: 01-Warehouse-Agent-Database.ipynb  02-Warehouse-Agent-Tools.ipynb  03-Warehouse-Agent-LangGraph.ipynb  04-litellm-router.ipynb  05-CI-Quality-Gate.ipynb
notebooks/week8/: 01-Warehouse-Agent-ADK.ipynb  02-Warehouse-Agent-A2A.ipynb  03-Warehouse-Agent-A2A-LangGraph.ipynb  04-ECS-Deployment-be.ipynb  04-ECS-Deployment-fe.ipynb  04-ECS-Deployment.ipynb  05-Qdrant-Cloud.ipynb  06-Postgres-Cloud.ipynb  07-Warehouse-Agent-Database-Cloud.ipynb
scripts/: aws-snapshot-ecs.sh  ecr.sh
scripts/ci/: build_be_task_definition.py
(+12 files in other folders)
