[project]
name = "01-ai-engineering-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.22",
    "beartype==0.20.0",
    "boto3>=1.42.27",
    "botocore[crt]>=1.42.27",
    "cohere>=5.19.0",
    "fastapi>=0.118.0",
    "fastembed>=0.7.3",
    "fastmcp==2.12.0",
    "google-adk>=1.20.0",
    "google-genai>=1.41.0",
    "groq>=0.32.0",
    "instructor>=1.11.3",
    "ipykernel>=6.30.1",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langsmith>=0.4.33",
    "litellm>=1.80.0",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "openai>=1.109.1,<2.0.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.6",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
